[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/craft_menu.gd" id="1"]

[node name="CraftMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Крафт"
theme_override_font_sizes/font_size = 20

[node name="SearchBox" type="LineEdit" parent="Panel/MarginContainer/VBox/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Поиск..."

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="Content" type="HSplitContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 150

[node name="CategoryList" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="RightPanel" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RecipeScroll" type="ScrollContainer" parent="Panel/MarginContainer/VBox/Content/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipeGrid" type="GridContainer" parent="Panel/MarginContainer/VBox/Content/RightPanel/RecipeScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="RecipeDetails" type="PanelContainer" parent="Panel/MarginContainer/VBox/Content/RightPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content/RightPanel/RecipeDetails"]
layout_mode = 2

[node name="RecipeName" type="Label" parent="Panel/MarginContainer/VBox/Content/RightPanel/RecipeDetails/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Выберите рецепт"
theme_override_font_sizes/font_size = 16

[node name="Ingredients" type="Label" parent="Panel/MarginContainer/VBox/Content/RightPanel/RecipeDetails/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 12

[node name="CraftButton" type="Button" parent="Panel/MarginContainer/VBox/Content/RightPanel/RecipeDetails/VBox"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Создать"
